[tool.poetry]
name = "radio"
version = "0.1.0"
description = "Web Audio Stream"
authors = ["Mykola <nchernov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.3"
pyaudio = "^0.2.13"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
ipython = "^8.14.0"
ruff = "^0.1.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
files = ["app/**/*.py"]
exclude = ["migrations/env.py", "migrations/version/*.py"]

[tool.ruff]
exclude = [
    "__pypackages__",
    "__pycache__",
    ".eggs",
    ".git",
    ".github",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "node_modules",
    "migrations",
]
line-length = 120
indent-width = 4
